caas-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caas
  labels:
    app: caas
spec:
  replicas: 3
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: caas
  template:
    metadata:
      labels:
        app: caas
    spec:
      containers:
      - name: caas
        resources:
          requests:
            memory: 32Mi
            cpu: 100m
          limits:
            memory: 64Mi
        image: redbridge/caas:3
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /count
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /count
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        imagePullPolicy: Always
        ports:
        - name: web
          containerPort: 8080
